Интегрирована работа с DTO во все используемые сервисы и контроллеры